<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">徐州机动车违章查询</string>
    <string name="breakrules_title">违章信息</string>
    <string name="txtView_DatabaseLabel">数据库日期</string>
    <string name="txtView_DatabaseDate">0000&#8211;00&#8211;00</string>
    <string name="txtView_CarIDLabel">车牌号码</string>
    <string name="txtView_CarEngieID">发动机号（后六位）</string>
    <string name="btn_Query">查询</string>
    <string name="btn_History">历史记录</string>
    <string name="tvCarIDXZ">苏C</string>
    <string name="btnTextHistory">历史记录</string>
    <string name="tvCarType">机动车类型</string>
    <string name="btn_back">返回</string>
    <string name="query_result">违章信息</string>
	<string name="tabLocalInfo">本地</string>
	<string name="tabRemoteInfo">异地/现场</string>
	<string name="tvNoLocalInfo">未发现本地违章信息</string>
	<string name="tvNoRemoteInfo">未发现异地或现场违章信息</string>
	<string name="tvDataFromCache">当前网络异常，违章数据为上次获取的信息！</string>
</resources>