<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/panel_background" >

    <include layout="@layout/hometitle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11" >

        <TextView
            android:id="@+id/textView1"
            style="@style/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
			android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="22dp"
            android:text="@string/txtView_DatabaseLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvDatabaseDate"
            style="@style/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:textColor="#ff0000"
            android:text="@string/txtView_DatabaseDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />        

        <Spinner
            android:id="@+id/spiCarTypeList"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/textView1" />
        
        <AutoCompleteTextView
            android:id="@+id/fieldCarID"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spiCarTypeList"
            android:layout_alignLeft="@+id/spiCarTypeList"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:maxLength="7"
            android:singleLine="true"
            android:hint="@string/txtView_CarIDLabel"
            android:text="@string/tvCarIDXZ" >

            <requestFocus />
        </AutoCompleteTextView>
        
        <AutoCompleteTextView
            android:id="@+id/carEngineID"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fieldCarID"
            android:layout_below="@+id/fieldCarID"
            android:layout_marginTop="8dp"
            android:hint="@string/txtView_CarEngieID"
            android:ems="10"
            android:maxLength="6"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnQuery"
            style="@style/button_action_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/carEngineID"
            android:layout_alignRight="@+id/tvDatabaseDate"
            android:layout_below="@+id/carEngineID"
            android:layout_marginTop="50dp"
            android:text="@string/btn_Query" />

    </RelativeLayout>

</LinearLayout>